--- a/openstack/oslo.cache/oslo.cache.spec.j2
+++ b/openstack/oslo.cache/oslo.cache.spec.j2
@@ -5,7 +5,7 @@ Release:        0
 Summary:        Cache storage for Openstack projects
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-Url:            http://launchpad.net/oslo
+Url:            http://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
