python-tackerclient: Do not require oslosphinx during runtime
Picking this again as it was reverted by:
89c39d6e59fcfb5023e010875a48bb7735125759

Rebased the contained patch to apply again.

Cherry picked from: If993d34fc279e8c911f0df3071f685c0c4c180f2
(cherry picked from commit b109e90c38c281e4fe79a64a2152ef784caa820b)
Change-Id: Ie3562ff574c16fe463c9c076897a99fdf8f0ac0e

--- a/openstack/python-tackerclient/python-tackerclient.spec.j2
+++ b/openstack/python-tackerclient/python-tackerclient.spec.j2
@@ -7,6 +7,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://launchpad.net/%{name}
 Source0:        https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
+# https://review.openstack.org/#/c/504056/
+Patch1:         0001-Move-oslosphinx-and-openstackdocstheme-to-test-requi.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('cliff-tablib') }}
 BuildRequires:  {{ py2pkg('devel') }}
