--- a/openstack/monasca-transform/monasca-transform.spec.j2
+++ b/openstack/monasca-transform/monasca-transform.spec.j2
@@ -1,6 +1,6 @@
 {% set pypi_name = 'monasca-transform' %}
 {% set pypi_tar_name = 'monasca_transform' %}
-{% set upstream_version = upstream_version('0.10.0') %}
+{% set upstream_version = upstream_version('0.11.0') %}
 {% set rpm_release = '1' %}
 {% set spark_req_version = '1.6.3' %}
 
@@ -32,6 +32,7 @@ BuildRequires:  {{ py2pkg('oslo.log') }}
 BuildRequires:  {{ py2pkg('oslo.service') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('pbr') }}
+BuildRequires:  {{ py2pkg('psutil') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
 BuildRequires:  {{ py2pkg('six') }}
 BuildRequires:  {{ py2pkg('stevedore') }}
