--- a/openstack/oslo.log/oslo.log.spec.j2
+++ b/openstack/oslo.log/oslo.log.spec.j2
@@ -1,12 +1,16 @@
-%global sname oslo.log
-Name:           {{ py2name('oslo.log') }}
-Version:        3.30.0
-Release:        0
+{% set pypi_name = 'oslo.log' %}
+{% set upstream_version = upstream_version('3.30.0') %}
+{% set rpm_release = '1' %}
+{% set source = url_pypi() %}
+
+Name:           {{ py2name() }}
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
 Summary:        OpenStack log library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Url:            https://launchpad.net/{{ pypi_name }}
+Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
 BuildRequires:  {{ py2pkg('mock') }}
@@ -51,7 +55,7 @@ BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 Documentation for the oslo.log library.
 
 %prep
-%autosetup -n %{sname}-%{version} -p1
+%autosetup -p1 -n {{ pypi_name }}-{{ upstream_version }}
 %py_req_cleanup
 sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
