monasca-notification: fixed log dir path.
Change-Id: I7495651c680edec5773c9284bb565ae25e47adb4
(cherry picked from commit 27d594a554a28c322c0d4f077d6cedb47115d1d1)

--- a/openstack/monasca-notification/monasca-notification.spec.j2
+++ b/openstack/monasca-notification/monasca-notification.spec.j2
@@ -7,7 +7,7 @@
 %define username    monasca-notification
 %define groupname   monasca
 %define notification_conf_dir %{_sysconfdir}/%{sname}
-%define notification_log_dir %{_localstatedir}/%{sname}
+%define notification_log_dir %{_localstatedir}/log/%{sname}
 Name:           {{ py2name() }}
 Version:        {{ py2rpmversion() }}
 Release:        {{ py2rpmrelease() }}
