--- a/openstack/oslo.concurrency/oslo.concurrency.spec.j2
+++ b/openstack/oslo.concurrency/oslo.concurrency.spec.j2
@@ -1,12 +1,16 @@
-%global sname oslo.concurrency
-Name:           {{ py2name('oslo.concurrency') }}
-Version:        3.22.0
-Release:        0
+{% set pypi_name = 'oslo.concurrency' %}
+{% set upstream_version = upstream_version('3.22.0') %}
+{% set rpm_release = '1' %}
+{% set source = url_pypi() %}
+
+Name:           {{ py2name() }}
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
 Summary:        OpenStack oslo.concurrency library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Url:            https://launchpad.net/{{ pypi_name }}
+Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
 BuildRequires:  {{ py2pkg('enum34') }}
@@ -50,7 +54,7 @@ external processes.
 This package contains the documentation.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -p1 -n {{ pypi_name }}-{{ upstream_version }}
 %py_req_cleanup
 sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
