--- a/openstack/oslo.config/oslo.config.spec.j2
+++ b/openstack/oslo.config/oslo.config.spec.j2
@@ -1,13 +1,17 @@
-%global sname oslo.config
-Name:           {{ py2name('oslo.config') }}
-Version:        4.12.0
+{% set pypi_name = 'oslo.config' %}
+{% set upstream_version = upstream_version('4.12.0') %}
+{% set rpm_release = '1' %}
+{% set source = url_pypi() %}
+
+Name:           {{ py2name() }}
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
 Epoch:          {{ epoch('oslo.config') }}
-Release:        0
 Summary:        OpenStack common configuration library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Url:            https://launchpad.net/{{ pypi_name }}
+Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PyYAML') }}
 BuildRequires:  {{ py2pkg('debtcollector') }}
@@ -52,7 +56,7 @@ BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 Documentation for the oslo-config library.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -p1 -n {{ pypi_name }}-{{ upstream_version }}
 %py_req_cleanup
 sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
