--- a/openstack/oslo.rootwrap/oslo.rootwrap.spec.j2
+++ b/openstack/oslo.rootwrap/oslo.rootwrap.spec.j2
@@ -1,12 +1,16 @@
-%global sname oslo.rootwrap
-Name:           {{ py2name('oslo.rootwrap') }}
-Version:        5.9.0
-Release:        0
+{% set pypi_name = 'oslo.rootwrap' %}
+{% set upstream_version = upstream_version('5.9.0') %}
+{% set rpm_release = '1' %}
+{% set source = url_pypi() %}
+
+Name:           {{ py2name() }}
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
 Summary:        Filtering shell commands to run as root from OpenStack services
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Url:            https://launchpad.net/{{ pypi_name }}
+Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
 BuildRequires:  {{ py2pkg('eventlet') }}
@@ -32,16 +36,16 @@ oslo.rootwrap allows fine-grained filtering of shell commands to run as root
 from OpenStack services.
 
 %package doc
-Summary:        Documentation for OpenStack %{sname}
+Summary:        Documentation for OpenStack {{ pypi_name }}
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
 
 %description doc
-Documentation for the OpenStack %{sname} library.
+Documentation for the OpenStack {{ pypi_name }} library.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -p1 -n {{ pypi_name }}-{{ upstream_version }}
 %py_req_cleanup
 sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
