--- a/openstack/oslo.context/oslo.context.spec.j2
+++ b/openstack/oslo.context/oslo.context.spec.j2
@@ -1,13 +1,17 @@
-%global sname oslo.context
+{% set pypi_name = 'oslo.context' %}
+{% set upstream_version = upstream_version('2.18.0') %}
+{% set rpm_release = '1' %}
+{% set source = url_pypi() %}
+
 %bcond_without test
-Name:           {{ py2name('oslo.context') }}
-Version:        2.18.0
-Release:        0
+Name:           {{ py2name() }}
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
 Summary:        OpenStack Oslo context library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Url:            https://launchpad.net/{{ pypi_name }}
+Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('positional') }}
@@ -35,7 +39,7 @@ BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 Documentation for the oslo-context library.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -p1 -n {{ pypi_name }}-{{ upstream_version }}
 %py_req_cleanup
 # without git, openstackdocstheme has warnings which let the doc build fail
 sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
