oslo.messaging: Skip zmq tests
These are flaky.

Change-Id: I492085006f36dd226fdfb2021d5d7762ac88caf2
(cherry picked from commit ad1e88718539b087e6a488775e67429bacd41f71)

--- a/openstack/oslo.messaging/oslo.messaging.spec.j2
+++ b/openstack/oslo.messaging/oslo.messaging.spec.j2
@@ -104,7 +104,10 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %{py2_install}
 
 %check
-%{__python2} setup.py testr --slowest
+# skip the zmq tests - theses are flaky
+testr init
+testr list-tests| grep -e zmq -v > test-list
+testr run --load-list test-list
 
 %files
 %license LICENSE
