Remove explict sed for doc build warnings
This is now obsolete, as the %py_req_cleanup macro does that
as a side-effect.

Change-Id: Ib3301ce22a618e85103499aa8de5375af3973326

--- a/openstack/neutron-lib/neutron-lib.spec.j2
+++ b/openstack/neutron-lib/neutron-lib.spec.j2
@@ -85,7 +85,7 @@ OpenStack Neutron library shared by all Neutron sub-projects.
 
 %prep
 %autosetup -n neutron-lib-%{version}
-sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
+%py_req_cleanup
 
 %build
 %{python_build}
