keystone: Use ostestr for running tests
This fixes:

/usr/bin/python2 setup.py testr
running testr
No .testr.conf config file
error: testr failed (3)

Change-Id: If5100981aacb3004583aca0d2d61ff3306ff1dad

--- a/openstack/keystone/keystone.spec.j2
+++ b/openstack/keystone/keystone.spec.j2
@@ -199,7 +199,7 @@ exit 0
 %check
 # don't want to depend on hacking for package building
 rm keystone/tests/unit/test_hacking_checks.py
-%{__python2} setup.py testr
+ostestr
 
 %post
 %tmpfiles_create %{_tmpfilesdir}/keystone.conf
