--- a/openstack/tripleo-common/tripleo-common.spec.j2
+++ b/openstack/tripleo-common/tripleo-common.spec.j2
@@ -12,7 +12,7 @@ BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('GitPython') }}
 BuildRequires:  {{ py2pkg('PyYAML') }}
 BuildRequires:  {{ py2pkg('devel') }}
-BuildRequires:  {{ py2pkg('docker-py') }}
+BuildRequires:  {{ py2pkg('docker') }}
 BuildRequires:  {{ py2pkg('gitdb') }}
 BuildRequires:  {{ py2pkg('python-heatclient') }}
 BuildRequires:  {{ py2pkg('python-ironic-inspector-client') }}
@@ -31,7 +31,8 @@ BuildRequires:  {{ py2pkg('testtools') }}
 Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('GitPython') }}
 Requires:       {{ py2pkg('Jinja2') }}
-Requires:       {{ py2pkg('docker-py') }}
+# FIXME(jpena): specifying a version below is apparently needed for RDO
+Requires:       {{ py2pkg('docker') }} >= 2.0.0
 Requires:       {{ py2pkg('gitdb') }}
 Requires:       {{ py2pkg('python-glanceclient') }}
 Requires:       {{ py2pkg('python-heatclient') }}
