Fix syntax error introduced in last change
the version dependency needs to be expanded by py2pkg() to avoid
double expansion "foo >= 2.0 >= 2.0"

Change-Id: I52506bedc8e049b3257a725259848af3d06b2fb3

--- a/openstack/tripleo-common/tripleo-common.spec.j2
+++ b/openstack/tripleo-common/tripleo-common.spec.j2
@@ -32,7 +32,7 @@ Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('GitPython') }}
 Requires:       {{ py2pkg('Jinja2') }}
 # FIXME(jpena): specifying a version below is apparently needed for RDO
-Requires:       {{ py2pkg('docker') }} >= 2.0.0
+Requires:       {{ py2pkg('docker', ('>=', '2.0.0')) }}
 Requires:       {{ py2pkg('gitdb') }}
 Requires:       {{ py2pkg('python-glanceclient') }}
 Requires:       {{ py2pkg('python-heatclient') }}
