Update python-tripleoclient to 8.1.0
Change-Id: I21d68ac2a5c16d251803d33ff426ba19c7525882

--- a/openstack/python-tripleoclient/python-tripleoclient.spec.j2
+++ b/openstack/python-tripleoclient/python-tripleoclient.spec.j2
@@ -1,6 +1,6 @@
 %global sname python-tripleoclient
 Name:           {{ py2name('python-tripleoclient') }}
-Version:        7.3.2
+Version:        8.1.0
 Release:        0
 Summary:        OpenstackClient plugin for tripleoclient
 License:        {{ license('Apache-2.0') }}
@@ -17,10 +17,12 @@ BuildRequires:  {{ py2pkg('python-ironicclient') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('python-openstackclient') }}
 BuildRequires:  {{ py2pkg('passlib') }}
+BuildRequires:  {{ py2pkg('psutil') }}
 BuildRequires:  {{ py2pkg('requests-mock') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 BuildRequires:  {{ py2pkg('tripleo-common') }}
+BuildRequires:  {{ py2pkg('python-zaqarclient') }}
 Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('cliff') }}
 Requires:       {{ py2pkg('python-heatclient') }}
@@ -30,9 +32,12 @@ Requires:       {{ py2pkg('python-ironicclient') }}
 Requires:       {{ py2pkg('python-mistralclient') }}
 Requires:       {{ py2pkg('python-openstackclient') }}
 Requires:       {{ py2pkg('passlib') }}
+Requires:       {{ py2pkg('psutil') }}
+Requires:       {{ py2pkg('simplejson') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('tripleo-common') }}
 Requires:       {{ py2pkg('websocket-client') }}
+Requires:       {{ py2pkg('python-zaqarclient') }}
 BuildArch:      noarch
 
 %description
