--- a/openstack/python-ironicclient/python-ironicclient.spec.j2
+++ b/openstack/python-ironicclient/python-ironicclient.spec.j2
@@ -1,6 +1,6 @@
 %global sname python-ironicclient
 Name:           {{ py2name('python-ironicclient') }}
-Version:        1.17.1
+Version:        2.0.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Ironic
 License:        {{ license('Apache-2.0')}}
@@ -80,7 +80,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 install -p -D -m 644 tools/ironic.bash_completion %{buildroot}%{_sysconfdir}/bash_completion.d/ironic.bash_completion
 
 %check
-%{__python2} setup.py testr
+ostestr
 
 %files
 %license LICENSE
