--- a/openstack/python-tackerclient/python-tackerclient.spec.j2
+++ b/openstack/python-tackerclient/python-tackerclient.spec.j2
@@ -10,7 +10,7 @@ Source0:        https://files.pythonhosted.org/packages/source/p/%{sname}/%{snam
 # https://review.openstack.org/#/c/504056/
 Patch1:         0001-Move-oslosphinx-and-openstackdocstheme-to-test-requi.patch
 BuildRequires:  openstack-macros
-BuildRequires:  {{ py2pkg('cliff-tablib') }}
+BuildRequires:  {{ py2pkg('cliff') }}
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
 BuildRequires:  {{ py2pkg('python-keystoneclient') }}
