--- a/openstack/openstacksdk/openstacksdk.spec.j2
+++ b/openstack/openstacksdk/openstacksdk.spec.j2
@@ -9,23 +9,22 @@ URL:            https://launchpad.net/python-openstacksdk
 Source0:        https://files.pythonhosted.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('beautifulsoup4') }}
-BuildRequires:  {{ py2pkg('deprecation') }}
-BuildRequires:  {{ py2pkg('devel') }}
-BuildRequires:  {{ py2pkg('fixtures') }}
-BuildRequires:  {{ py2pkg('jsonpatch') }}
-BuildRequires:  {{ py2pkg('mock') }}
-BuildRequires:  {{ py2pkg('openstackdocstheme') }}
-BuildRequires:  {{ py2pkg('os-testr') }}
-BuildRequires:  {{ py2pkg('pbr') }}
-BuildRequires:  {{ py2pkg('requests') }}
-BuildRequires:  {{ py2pkg('requests-mock') }}
-BuildRequires:  {{ py2pkg('setuptools') }}
-BuildRequires:  {{ py2pkg('six') }}
-BuildRequires:  {{ py2pkg('stevedore') }}
-BuildRequires:  {{ py2pkg('testrepository') }}
-BuildRequires:  {{ py2pkg('testscenarios') }}
-BuildRequires:  {{ py2pkg('testtools') }}
+BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('beautifulsoup4', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('deprecation', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('fixtures', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('jsonpatch', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('mock', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('os-testr', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('requests', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('requests-mock', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('setuptools', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('six', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stevedore', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('deprecation') }}
 Requires:       {{ py2pkg('jsonpatch') }}
 Requires:       {{ py2pkg('keystoneauth1') }}
@@ -33,6 +32,7 @@ Requires:       {{ py2pkg('os-client-config') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('stevedore') }}
 BuildArch:      noarch
+%python_subpackages
 
 %description
 The python-openstacksdk is a collection of libraries for building
@@ -40,7 +40,7 @@ applications to work with OpenStack clouds. The project aims to
 provide a consistent and complete set of interactions with OpenStack's
 many services, along with complete documentation, examples, and tools.
 
-%package doc
+%package -n python-openstacksdk-doc
 Summary:        %{summary} - Documentation
 Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
@@ -49,7 +49,7 @@ BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('os-client-config') }}
 Requires:       %{name} = %{version}
 
-%description doc
+%description -n python-openstacksdk-doc
 The python-openstacksdk is a collection of libraries for building
 applications to work with OpenStack clouds. The project aims to
 provide a consistent and complete set of interactions with OpenStack's
@@ -65,24 +65,26 @@ sed -i -e "s,'sphinx.ext.intersphinx'\,,," doc/source/conf.py
 sed -i 's/^warning-is-error.*/warning-is-error=0/g' setup.cfg
 
 %build
-%py2_build
+%python_build
 export PYTHONPATH=.
 %{__python2} setup.py build_sphinx
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %install
-%py2_install
+%python_install
 
 %check
-%{__python2} setup.py testr
+%{python_expand rm -rf .testrepository
+$python setup.py test
+}
 
-%files
+%files %{python_files}
 %license LICENSE
 %doc ChangeLog README.rst
 %{python2_sitelib}/openstack
 %{python2_sitelib}/*.egg-info
 
-%files doc
+%files -n python-openstacksdk-doc
 %license LICENSE
 %doc doc/build/html
 
