--- a/openstack/python-saharaclient/python-saharaclient.spec.j2
+++ b/openstack/python-saharaclient/python-saharaclient.spec.j2
@@ -1,6 +1,6 @@
 %global sname saharaclient
 Name:           {{ py2name('python-saharaclient') }}
-Version:        1.3.0
+Version:        1.4.0
 Release:        0
 Summary:        Client library for OpenStack Sahara API
 License:        {{ license('Apache-2.0') }}
@@ -70,7 +70,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %check
 # we don't want to depend on hacking/flake8/pep8
 rm -v saharaclient/tests/unit/test_hacking.py
-%{__python2} setup.py testr
+ostestr
 
 %files
 %license LICENSE
